<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="casual"
        android:layout_gravity="center"
        android:text="@string/details_of_people"/>

    <TextView
        android:id="@+id/tv_people_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="8dp"
        android:fontFamily="casual"
        android:layout_gravity="center"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/tv_peoples_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/peoples_number"/>

    <TextView
        android:id="@+id/tv_peoples_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/peoples_type"/>

    <TextView
        android:id="@+id/tv_added_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/date"/>


</LinearLayout>