<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4">


    <TextView
        android:id="@+id/tv_show_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="italic|bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:fontFamily= "casual"
        android:textColor="@color/colorPrimary"
        android:text="@string/payment_details" />

    <TextView
        android:id="@+id/tv_payment_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_date"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="#0D47A1"/>

    <TextView
        android:id="@+id/tv_payer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_payment_from"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textStyle="italic"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_type"
        android:textStyle="italic"
        android:fontFamily="casual"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_amount"
        android:textStyle="italic"
        android:fontFamily="casual"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="#0D47A1"
        android:textSize="18sp"
        android:textAlignment="center"/>
</LinearLayout>