<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.loanbook.AddPaymentActivity">


    <Spinner
        android:id="@+id/spn_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_showdate"
        android:layout_marginEnd="79dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="47dp"
        android:popupBackground="#F57F17"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_showdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="142dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="46dp"
        android:fontFamily="serif-monospace"
        android:text="@string/show_date"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#212121"/>

    <Spinner
        android:id="@+id/spr_payment_type"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/spn_name"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:entries="@array/transaction"
        android:layout_marginEnd="79dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />


    <Button
        android:id="@+id/btn_payment"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit_payment"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_payment"
        android:layout_marginBottom="57dp">

    <EditText
        android:id="@+id/et_amount_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spinner"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/add_amount"
        android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
